# binarch2

./: Cargo.toml  README.md
binarch/: Cargo.toml
binarch/src/: main.rs
rbinarch/: Cargo.toml
rbinarch/src/: binarch.rs  lib.rs  magic.rs
src/: arg.rs  binarch.rs  magic.rs  main.rs
