[package]
name = "binarch"
version = "1.0.2"
edition = "2021"
repository = "https://github.com/WorksButNotTested/binarch2-private"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
env_logger = "0.10.0"
indicatif = {version = "0.17.2", features = ["rayon"] }
log = "0.4.17"
memmap = "0.7.0"
rayon = "1.6.1"
regex = "1.7.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
