[package]
name = "binarch"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/WorksButNotTested/binarch2-private.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
env_logger = "0.10.0"
indicatif = {version = "0.17.2", features = ["rayon"] }
log = "0.4.17"
memmap = "0.7.0"
rayon = "1.6.1"
rbinarch = { path = "../rbinarch", features = ["parallel"]}
