[package]
name = "rbinarch"
version = "0.1.0"
edition = "2021"

[lib]
name = "rbinarch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
parallel = ["anyhow", "indicatif", "rayon"]

[dependencies]
anyhow = {version = "1.0.68", optional = true}
indicatif = {version = "0.17.2", optional = true, features = ["rayon"] }
rayon = {version = "1.6.1", optional = true}
regex = "1.7.1"

